--- a/Sources/SoliditySyntaxTree/SyntaxTrees.csproj
+++ b/Sources/SoliditySyntaxTree/SyntaxTrees.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -14,6 +14,10 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="C:\Users\shane\.nuget\packages\jsonsubtypes\1.4.0\contentFiles\any\netstandard2.0\README.md" Link="Solidity\README.md" />
   </ItemGroup>
 
   <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
